--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,27 +5,27 @@ body {
 
 @font-face {
     font-family: 'Minal';
-    src: url('Minal.woff2') format('woff2');
+    src: url('../font/Minal.woff2') format('woff2');
   }
 
 @font-face {
     font-family: 'Nohemi-Bold';
-    src: url('Nohemi-Bold.woff2') format('woff2');
+    src: url('../font/Nohemi-Bold.woff2') format('woff2');
   }
 
 @font-face {
     font-family: 'Nohemi-Light';
-    src: url('Nohemi-Light.woff2') format('woff2');
+    src: url('../font/Nohemi-Light.woff2') format('woff2');
   }
 
 @font-face {
     font-family: 'Nohemi-Medium';
-    src: url('Nohemi-Medium.woff2') format('woff2');
+    src: url('../font/Nohemi-Medium.woff2') format('woff2');
   }
 
 @font-face {
     font-family: 'Nohemi-Regular';
-    src: url('Nohemi-Regular.woff2') format('woff2');
+    src: url('../font/Nohemi-Regular.woff2') format('woff2');
   }
 
 h1 {
