--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,6 +44,11 @@ p {
     font-family: 'Nohemi-Regular';
 }
 
+a {
+    font-family: 'Nohemi-Regular';
+}
+
+
 
 footer {
     background-color: black;
