--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,7 +115,7 @@ p {
 }
 
 button {
-    background-color: #008CBA;
+    background-color: rgb(30, 99, 245);
     color: white;
     padding: 10px 20px;
     font-size: 18px;
