--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,11 @@ button {
     border: none;
     cursor: pointer;
     border-radius: 15px
+    height: 58px;
+    left: 557px;
+    position: absolute;
+    top: 577px;
+    width: 167px;
 }
 
 button:hover {
