--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,7 +121,7 @@ button {
     font-size: 18px;
     border: none;
     cursor: pointer;
-    border-radius: 15px
+    border-radius: 15px;
     height: 58px;
     left: 557px;
     position: absolute;
