--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,8 @@ button {
     border: none;
     cursor: pointer;
     border-radius: 15px !important; 
+    height: 58px;
+    width: 167px;
 }
 
 button:hover {
