--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,3 +208,11 @@ button:hover {
     display: flex;
     justify-content: space-around;
 }
+
+
+/*Inscription */
+
+.Inscription{
+    border-radius: 20px;
+
+}
