--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,7 +117,7 @@ p {
     margin: 30px;
 }
 
-.buttongen {
+button .buttongen {
     background-color: rgb(30, 99, 245);
     color: white;
     padding: 10px 20px;
