--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,11 +76,12 @@ footer img {
     border: none;
     padding: 8px 16px;
     cursor: pointer;
-    font-size: 14px;
     height: 47px;
     width: 167px;
     border-radius: 15px !important; 
     outline: 2px solid #fff !important;
+    font-family: 'Nohemi-Regular';
+    font-size: 18px;
 }
 
 h1 {
@@ -122,6 +123,7 @@ p {
     background-color: rgb(30, 99, 245);
     color: white;
     padding: 10px 20px;
+    font-family: 'Nohemi-Regular';
     font-size: 18px;
     border: none;
     cursor: pointer;
