--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,7 +71,7 @@ footer img {
 }
 
 .buttonfooter:hover {
-    outline-color: rgb(30, 99, 245);
+    outline-color: rgb(30, 99, 245) !important;
     background-color: black;
 }
 .buttonfooter {
