--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,7 +219,16 @@ button:hover {
 }
 
 .qui_sommes_nous{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 /*Inscription */
