--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,6 +52,32 @@ a {
     font-family: 'Nohemi-Regular';
 }
 
+.accueil1{
+    border-radius: 5px;
+    height: 530px;
+    left: 64px;
+    position: absolute;
+    top: 766px;
+    width: 763px;
+}
+
+.accueil2{
+    border-radius: 5px;
+    height: 357px;
+    left: 859px;
+    position: absolute;
+    top: 766px;
+    width: 357px;
+}
+
+.accueil3{
+    margin: 30px;
+}
+
+.accueil4{
+    margin: 30px;
+}
+
 
 
 footer {
