--- a/src/css/style.css
+++ b/src/css/style.css
@@ -245,6 +245,11 @@ button:hover {
     flex-direction: row;
 }
 
+.carroussel{
+    display: flex;
+    justify-content: space-around;
+}
+
 /*Inscription */
 
 .pop-up{
