--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,6 +91,10 @@ footer img {
     width: 95px;
 }
 
+footer h5 {
+    font-family: 'Nohemi-Regular';
+}
+
 .buttonfooter:hover {
     outline-color: rgb(30, 99, 245) !important;
     background-color: black;
