--- a/src/css/style.css
+++ b/src/css/style.css
@@ -265,21 +265,42 @@ button:hover {
     left: 0;
 }
 
-#modal .container{
-    position: relative;
-    background: white;
+.formulaire{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    text-align: center;
     top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 300px;
-    height: auto;
-    min-height: 50px;
+    margin: auto;
+    width: 40%;
+    border: 3px solid black;
+    border-radius: 20px;
+    margin-bottom: 10%;
+    
 }
 
-#modal .container .message{
-    padding: 5% 15% 5% 5%;
+.encliquant{
+    font-size: 12px;
 }
 
-p {
-    border-bottom:1px solid black;
-    }
+.inscrivezvous{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    top: 20%; 
+}
+
+.bouton{
+    padding: 0.7em 8.5em 0.7em 8.5em;
+    border-radius: 15px;
+    text-align: center;
+    background-color:  rgba(30, 99, 245, 1);
+    border-color: rgba(30, 99, 245, 1);
+    color: #fff;
+}
+
+
+
+
+
+
