--- a/src/css/style.css
+++ b/src/css/style.css
@@ -409,6 +409,8 @@ button:hover {
     justify-content: space-around;
     flex-direction: column;
     text-align: center;
+    height:911px;
+    width:645px;
     top: 50%;
     margin: auto;
     width: 40%;
