--- a/src/css/style.css
+++ b/src/css/style.css
@@ -440,8 +440,13 @@ button:hover {
     color: #fff;
 }
 
-
-
+.Nom {
+    height:50px;
+    width:249px;
+    top:310px;
+    left:197px;
+    position:absolute;  
+}
 
 
 
