--- a/src/css/style.css
+++ b/src/css/style.css
@@ -288,7 +288,6 @@ button:hover {
     justify-content: space-around;
 }
 
-/*Inscription */
 
 .pop-up{
     border: 1px solid black;
@@ -333,18 +332,19 @@ button:hover {
     border: 3px solid black;
     border-radius: 20px;
     margin-bottom: 10%;
-    
+    margin-top: 5%;
 }
 
 .encliquant{
-    font-size: 12px;
+font-size: 12px;
+padding: 1em 5em 6em;
 }
 
 .inscrivezvous{
     text-align: center;
     display: flex;
     justify-content: center;
-    top: 20%; 
+    margin-top: 1em;
 }
 
 .bouton{
@@ -366,78 +366,33 @@ button:hover {
     background-color: rgba(236, 236, 236, 1);
     border-radius: 5px;
     color: rgba(116, 116, 116, 1);
-    border-color: rgba(205, 205, 205, 1);    
+    border-color: rgba(205, 205, 205, 1);
     border-width: 0.1em;
-    border-style: solid;}
-
-/*Connexion */
-
-.pop-up{
-    border: 1px solid black;
-    border-radius: 20px;
-    background-color: red;
+    border-style: solid;
+    height: 2.5em;
+    width: 23em;
 }
 
-.hidden{
-    display:none;
-}
 
-#modal{
-    position: fixed;
-    z-index: 99999;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
-}
-#modal.open{
+.mail{
     display: block;
-}
-#modal .mask{
-    background: black;
-    opacity: 0.8;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    padding: 1em;
 }
 
-.formulaire{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    text-align: center;
-    height:819px;
-    width:580px;
-    top: 50%;
-    margin: auto;
-    width: 40%;
-    border: 3px solid black;
-    border-radius: 20px;
-    margin-bottom: 10%;
-    
+.mdp{
+    display: block;
+    padding: 1em;
 }
 
-.encliquant{
-    font-size: 12px;
+.confirmer_mdp{
+    display: block;
+    padding: 1em;
 }
 
-.inscrivezvous{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    top: 20%; 
-}
+.Nom {
+    height:50px;
+    width:249px;
 
-.bouton{
-    padding: 0.7em 8.5em 0.7em 8.5em;
-    border-radius: 15px;
-    text-align: center;
-    background-color:  rgba(30, 99, 245, 1);
-    border-color: rgba(30, 99, 245, 1);
-    color: #fff;
 }
 
 
