--- a/src/css/style.css
+++ b/src/css/style.css
@@ -288,7 +288,8 @@ button:hover {
     justify-content: space-around;
 }
 
-/* INsciption */
+/*Inscription*/
+
 .pop-up{
     border: 1px solid black;
     border-radius: 20px;
@@ -388,6 +389,13 @@ padding: 1em 5em 6em;
     display: block;
     padding: 1em;
 }
+
+.Nom {
+    height:50px;
+    width:249px;
+
+}
+
 
 
 /* Contact */
