--- a/src/css/style.css
+++ b/src/css/style.css
@@ -462,7 +462,7 @@ padding: 1em 5em 6em;
     padding-bottom: 80px;
 }
 
-.cgu h1 {
+.cgutitre{
     text-align: center;
     height: auto;
     line-height: normal;
