--- a/src/css/style.css
+++ b/src/css/style.css
@@ -456,7 +456,7 @@ padding: 1em 5em 6em;
     left: 162px;
     letter-spacing: 0.00px;
     line-height: 24px;
-    text-align: left;
+    text-align: center;
     top: 309px;
     width: 955px;
     padding-bottom: 80px;
