--- a/src/css/style.css
+++ b/src/css/style.css
@@ -453,7 +453,7 @@ padding: 1em 5em 6em;
     padding-top: 50px;
     display: flex;
     height: auto;
-    left: 162px;
+    margin-left: 162px;
     letter-spacing: 0.00px;
     line-height: 24px;
     text-align: left;
