--- a/src/css/style.css
+++ b/src/css/style.css
@@ -454,6 +454,7 @@ padding: 1em 5em 6em;
     display: flex;
     height: auto;
     margin-left: 500px;
+    padding-right: 150px;
     letter-spacing: 0.00px;
     line-height: 24px;
     text-align: left;
