--- a/src/css/style.css
+++ b/src/css/style.css
@@ -464,6 +464,7 @@ padding: 1em 5em 6em;
 }
 
 .cgutitre{
+    padding-top: 50px;
     text-align: center;
     height: auto;
     line-height: normal;
