--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,11 +78,16 @@ a {
 
 footer {
     background-color: black;
-    color: white;
+    color: white !important;
     padding: 20px;
     display: flex;
     justify-content: space-around;
     height: 329px;
+}
+
+.liens_footer{
+    color: white !important;
+    text-decoration: none !important;
 }
 
 footer div {
