--- a/src/css/style.css
+++ b/src/css/style.css
@@ -505,3 +505,9 @@ padding: 1em 5em 6em;
 .contact {
     padding-top: 50px;
 }
+
+.blogarticle {
+    left: 843px;
+    top: 910px;
+    width: 276px;
+}
