--- a/src/css/style.css
+++ b/src/css/style.css
@@ -512,3 +512,16 @@ padding: 1em 5em 6em;
     top: 910px;
     width: 276px;
 }
+.blog_sections {
+    
+}
+
+.blog_sections h2 {
+    height: auto;
+    letter-spacing: 0.00px;
+    line-height: normal;
+    text-align: left;
+    left: 161px;
+    top: 984px;
+    width: 439px;
+}
