--- a/src/css/style.css
+++ b/src/css/style.css
@@ -513,6 +513,7 @@ padding: 1em 5em 6em;
     width: 276px;
 }
 .blog_sections {
+    margin-left: 500px;
     left: 161px;
     line-height: 31.2px;
     top: 2352px;
